--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,7 @@ body,
 }
 body {
   font-family: "Roboto", sans-serif;
-  background-image: linear-gradient(135deg, #89f7fe 10%, #66a6ff 100%);
+  background: linear-gradient(135deg, #2C5364 0%, #203A43 50%, #0F2027 100%);
   align-items: center;
   justify-content: center;
   padding: 92px 24px;
@@ -44,6 +44,7 @@ body {
 /* Weather card */
 .weather-card {
   max-width: 760px;
+  height: 500px;
   width: 100%;
   margin: 22px auto;
   padding: 22px;
@@ -64,7 +65,8 @@ body {
 .search {
   display: flex;
   gap: 8px;
-  margin-bottom: 14px;
+  margin-bottom: 25px;
+  margin-top: 15px;
 }
 .search input {
   flex: 1;
@@ -121,8 +123,9 @@ body {
   text-align: center;
 }
 .image img {
-  height: 120px;
-  width: 120px;
+  margin-top: 50px;
+  height: 150px;
+  width: 150px;
   object-fit: contain;
   filter: drop-shadow(0 6px 18px rgba(43, 111, 179, 0.08));
 }
@@ -208,9 +211,9 @@ body {
 
 .Footer{
   text-align: center;
-  margin-top: 40px;
-  font-size: 7px;
-  color: rgba(255, 255, 255, 0.85);
+  margin-top: 60px;
+  font-size: 8px;
+  color: gold;
   font-weight: 600;
 }
 
